---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 8/10/2022
  Changes:
    Kombat Drones:
      - added dependency "logistics-2", "fast-inserter", "advanced-electronics", "military-science" to "infantry-depot" tech and removed military-1 dependency
      - added "military-science-pack" to all infantry technologies
      - added "chemical-science-pack" ingredient and a dependency to "power-infantry"
      - "infantry-depot" changed "electronic-circuit" to "advanced-circuit" ingredient (x10)
      - "infantry-depot" changed "inserter" and "transport-belt" to fast variant

    Transport Drones:
      - added dependency "logistics-2" and "advanced-electronics" to "transport-system" tech
      - added dependency "concrete" to "fast-road" tech

    Mining Drones:
      - "mining-depot" and "mining-drones" is disabled by default, added technology for them

    Hovercraft:
      - added dependency "water-transport"
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 8/10/2022
  Changes:
    Kombat Drones:
      - "infantry-depot" added "logistic-science-pack" ingredient
      - "infantry-depot" added "electronic-circuit" ingredient (x10)
      - "infantry-depot" added "transport-belt" ingredient (x10)
      - "infantry-depot" added "inserter" ingredient (x10)
      - "basic-infantry" added "electronic-circuit" ingredient (x2)
      - "heavy-infantry" added "advanced-circuit" ingredient (x2)
      - "power-infantry" added "processing-unit" ingredient (x2)

    Mining Drones:
      - mining depot added "electronic-circuit" ingredient (x10)
      - mining drone added "electric-motor" ingredient (x1)

    Transport Drones:
      - "request-depot", "supply-depot", "fuel-depot", "fluid-depot", "buffer-depot" added "electronic-circuit" ingredient (x5)
      - "mining-depot" added "electronic-circuit" ingredient (x1)

    Construction Drones: