@@ -14,7 +14,6 @@
     "trainConstructionSite >= 0.2.19",
     "Updated_Construction_Drones >= 1.0.6",
     "aai-programmable-vehicles >= 0.7.22",
-    "aai-signals >= 0.6.1",
     "aai-vehicles-chaingunner >= 0.6.1",
     "aai-vehicles-flame-tank >= 0.5.1",
     "aai-vehicles-flame-tumbler >= 0.6.1",
@@ -22,8 +21,9 @@
     "aai-vehicles-laser-tank >= 0.6.4",
     "aai-vehicles-miner >= 0.6.4",
     "aai-vehicles-warden >= 0.5.3",
-    "aai-zones >= 0.6.4",
     "aai-vehicles-ironclad >= 0.6.5",
+    "aai-signals >= 0.6.1",
+    "aai-zones >= 0.6.4",
     "cargo-ships >= 0.1.18",
     "Hovercrafts >= 1.2.2",
     "AircraftRealism >= 1.4.1",
